# databaseSnake

./: .gitignore  README.md  pyproject.toml
dbsearcher/: __init__.py  __main__.py  constants.py  exceptions.py  logging.py  types.py
dbsearcher/search/: __init__.py  engine.py  indexer.py  parsers.py  results.py
dbsearcher/ui/: __init__.py  colors.py  display.py  effects.py  menu.py
dbsearcher/utils/: __init__.py  external.py  filesystem.py  platform.py
